manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assaia-test-svc
spec:
  type: ClusterIP
  selector:
    app: assaia-test
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
